Upgrading Groovy and Tomcat